--- a/index.html
+++ b/index.html
@@ -118,12 +118,15 @@
     </nav>
     <main>
         <section class="slider">
-            <h1>Sumondo Mental Fitness</h1>
-            <p>Detect and treat stress before you suffer from it</p>
-            <div class="choose-option-buttons">
-                <button class="corporate-button">For Corporates</button>
-                <button class="individual-button">For Individual</button>
+            <div class="slider-container">
+                <h1>Sumondo Mental Fitness</h1>
+                <p>Detect and treat stress before you suffer from it</p>
+                <div class="choose-option-buttons">
+                    <button class="corporate-button">For Corporates</button>
+                    <button class="individual-button">For Individual</button>
+                </div>
             </div>
+
         </section>
         <section class="video">
             <video width="640" height="360" controls>
@@ -135,6 +138,18 @@
         <ul>Company
             <li>
                 <a href="about/index.html">About</a>
+            </li>
+            <li>
+                <a href="about/index.html">Team</a>
+            </li>
+            <li>
+                <a href="press/index.html">Press & Media</a>
+            </li>
+            <li>
+                <a href="refund-shipping-conditions/index.html">Refund & Shopping COnditions</a>
+            </li>
+            <li>
+                <a href="about/index.html">Careers</a>
             </li>
         </ul>
     </footer>
