stick the footer at the bottom with grid

--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
                 <source src="https://youtu.be/lmaOwqWSLkc">
             </video>
         </section>
+        <section class="video">
+            <video width="640" height="360" controls>
+                <source src="https://youtu.be/lmaOwqWSLkc">
+            </video>
+        </section>
     </main>
     <footer class="main-footer">
         <ul>Company
