--- a/test/index.html
+++ b/test/index.html
@@ -27,7 +27,7 @@
                     <label for="field1">Field 1</label>
                     <input type="text" name="field1" id="field1">
                 </div>
-                <!-- <div class="form-row">
+                <div class="form-row">
                     <label for="field2">Field 2</label>
                     <input type="text" name="field2" id="field2">
                 </div>
@@ -50,7 +50,7 @@
                 <div class="form-row">
                     <label for="password">Field 7</label>
                     <input type="text" name="field7" id="field7">
-                </div> -->
+                </div>
             </form>
         </main>
         <footer>
