fix the grid layout and scroll header js

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                                 <button class="lang-button">SV</button>
                             </div>
                         </nav>
-
-                        </button>
+                        <div class="cart">
+                            
+                        </div>
                     </div>
                     <button class="hamburger-menu" id="hamburger-menu">
                         <i class="fas fa-bars fa-2x"></i>
@@ -93,8 +94,6 @@
             <div>
                 <section>
                     <div class="slider">
-
-
                         <div class="slider-container">
                             <h1>Sumondo Mental Fitness</h1>
                             <p>Detect and treat stress before you suffer from it</p>
