--- a/index.html
+++ b/index.html
@@ -24,42 +24,53 @@
                                 alt="Sumondo Mental Fitness - detect and treat stress before you suffer from it">
                         </a>
                     </div>
-                    <div class="nav-lang-cart">
-                        <nav class="main-nav">
-                            <ul class="main-nav-items">
-                                <li class="main-nav-item">
-                                    <a href="index.html">Home</a>
-                                </li>
-                                <li class="main-nav-item">
-                                    <a href="product/index.html">Product</a>
-                                </li>
-                                <li class="main-nav-item">
-                                    <a href="shop/index.html">Shop</a>
-                                </li>
-                                <li class="main-nav-item">
-                                    <a href="press/index.html">Press</a>
-                                </li>
-                                <li class="main-nav-item">
-                                    <a href="blog/index.html">Blog</a>
-                                </li>
-                            </ul>
-                            <div class="lang-buttons">
-                                <button class="lang-button">DA</button>
-                                <button class="lang-button">NL</button>
-                                <button class="lang-button">EN</button>
-                                <button class="lang-button">SV</button>
-                            </div>
-                        </nav>
+                    <div class="rest-container">
+
+                        <div class="nav-lang-cart">
+                            <nav class="main-nav">
+                                <ul class="main-nav-items">
+                                    <li class="main-nav-item">
+                                        <a href="index.html">Home</a>
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="product/index.html">Product</a>
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="shop/index.html">Shop</a>
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="press/index.html">Press</a>
+                                    </li>
+                                    <li class="main-nav-item">
+                                        <a href="blog/index.html">Blog</a>
+                                    </li>
+                                </ul>
+                                <div class="lang-buttons">
+                                    <button class="lang-button">DA</button>
+                                    <button class="lang-button">NL</button>
+                                    <button class="lang-button">EN</button>
+                                    <button class="lang-button">SV</button>
+                                </div>
+                            </nav>
+                        </div>
+                        <button class="hamburger-menu" id="hamburger-menu">
+                            <i class="fas fa-bars fa-2x"></i>
+                        </button>
+                        <button class="close-mobile-nav" id="close-mobile-nav">
+                            <i class="fas fa-times fa-2x"></i>
+                        </button>
                         <div class="cart">
+                            <button>
+                                <i class="fas fa-shopping-bag fa-2x"></i>
+                                <a href=""></a>
+                            </button>
+                            <div class="cart-span">
+                                <span>0</span>
+                            </div>
                             
                         </div>
                     </div>
-                    <button class="hamburger-menu" id="hamburger-menu">
-                        <i class="fas fa-bars fa-2x"></i>
-                    </button>
-                    <button class="close-mobile-nav" id="close-mobile-nav">
-                        <i class="fas fa-times fa-2x"></i>
-                    </button>
+
                 </div>
                 <nav class="mobile-nav">
                     <div class="mobile-nav-container">
