refacture the main-nav, change styling on scroll

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="rest-container">
                         <div class="nav-lang-cart">
                             <nav class="main-nav">
-                                <ul class="main-nav-items">
+                                <ul class="main-nav-items ">
                                     <li class="main-nav-item">
                                         <a href="index.html">Home</a>
                                     </li>
@@ -43,13 +43,19 @@
                                     <li class="main-nav-item">
                                         <a href="blog/index.html">Blog</a>
                                     </li>
+                                    <li class="lang-button">
+                                        <a href="">DA</a>
+                                    </li>
+                                    <li class="lang-button">
+                                        <a href="">NL</a>
+                                    </li>
+                                    <li class="lang-button">
+                                        <a href="">EN</a>
+                                    </li>
+                                    <li class="lang-button">
+                                        <a href="">SV</a>
+                                    </li>
                                 </ul>
-                                <div class="lang-buttons">
-                                    <button class="lang-button">DA</button>
-                                    <button class="lang-button">NL</button>
-                                    <button class="lang-button">EN</button>
-                                    <button class="lang-button">SV</button>
-                                </div>
                             </nav>
                         </div>
                         <button class="hamburger-menu" id="hamburger-menu">
@@ -115,21 +121,6 @@
                     </div>
                 </nav>
             </div>
-            <!-- <div class="cart-info">
-                <div class="purchases">
-                    <p>No products in the cart.</p>
-                </div>
-                <div class="status">
-                    <div class="value">
-                        <p>Subtotal</p>
-                        <p>DKK<span>0.00</span></p>
-                    </div>
-                    <div class="cart-buttons">
-                        <a href="">View cart</a>
-                        <a href="">Checkout</a>
-                    </div>
-                </div>
-            </div> -->
         </header>
         <main>
             <div>
