build up footer

--- a/index.html
+++ b/index.html
@@ -202,23 +202,94 @@
             </div>
         </main>
         <footer class="main-footer">
-            <ul>Company
-                <li>
-                    <a href="about/index.html">About</a>
-                </li>
-                <li>
-                    <a href="about/index.html">Team</a>
-                </li>
-                <li>
-                    <a href="press/index.html">Press & Media</a>
-                </li>
-                <li>
-                    <a href="refund-shipping-conditions/index.html">Refund & Shopping COnditions</a>
-                </li>
-                <li>
-                    <a href="about/index.html">Careers</a>
-                </li>
-            </ul>
+            <article class="footer-menu">
+                <section class="footer-menu-column">
+                    <ul>Company
+                        <li>
+                            <a href="about/index.html">About</a>
+                        </li>
+                        <li>
+                            <a href="about/index.html">Team</a>
+                        </li>
+                        <li>
+                            <a href="press/index.html">Press & Media</a>
+                        </li>
+                        <li>
+                            <a href="refund-shipping-conditions/index.html">Refund & Shopping COnditions</a>
+                        </li>
+                        <li>
+                            <a href="about/index.html">Careers</a>
+                        </li>
+                    </ul>
+                    <ul>Sumondo for Partners
+                        <li>
+                            <a href="learning-center/index.html">Learning Center FAQs</a>
+                        </li>
+                    </ul>
+                </section>
+                <section class="footer-menu-column">
+                    <ul>Science
+                        <li>
+                            <a href="scientific-background/index.html">Scientific background</a>
+                        </li>
+                        <li>
+                            <a href="heart-rate-variability/index.html">Heart rate variability</a>
+                        </li>
+                        <li>
+                            <a href="stress/index.html">Stress</a>
+                        </li>
+                        <li>
+                            <a href="heart-strokes/index.html">Heart strokes</a>
+                        </li>
+                        <li>
+                            <a href="physical-work-recovery/index.html">Physical work &amp; recovery</a>
+                        </li>
+                        <li>
+                            <a href="shop-international/index.html">Shop international</a>
+                        </li>
+                    </ul>
+                    <ul>Contact us
+                        <li>
+                            <a href="">Leave us a message</a>
+                        </li>
+                    </ul>
+                </section>
+                <section class="footer-menu-column">
+                    <ul>Cases
+                        <li>
+                            <a href="music-stress/index.html">Music &amp; stress</a>
+                        </li>
+                        <li>
+                            <a href="traffic-stress/index.html">Traffic &amp; stress</a>
+                        </li>
+                        <li>
+                            <a href="cognitive-strength-stress/index.html">Cognitive strength &amp; stress</a>
+                        </li>
+                    </ul>
+                    <ul>Support
+                        <li>
+                            <a href="">24/7 support</a>
+                        </li>
+                        <li>
+                            <a href="">Contact support</a>
+                        </li>
+                    </ul>
+                </section>
+                <section class="footer-menu-column">
+                    <ul>Contact Information
+                        <li><i class="fas fa-home"></i> Ole Maaløes Vej 3, 2200 København</li>
+                        <li><i class="fas fa-phone-alt"></i> +4528595783</li>
+                        <li><i class="fas fa-envelope"></i> info@sumondo.co</li>
+                    </ul>
+                </section>
+            </article>
+            <article class="foorter-copyright">
+                <p>copyright &copy; <span>2021</span> sumondo. All rights reserved</p>
+                <div class="footer-terms">
+                    <a href="terms-conditions/index.html">Terms &amp; Conditions</a>
+                    <a href="privacy-policy/index.html">Privacy Policy</a>
+                </div>
+            </article>
         </footer>
         <script src="shared.js"></script>
     </article>
