testing the copy branch

--- a/website/index.html
+++ b/website/index.html
@@ -127,7 +127,7 @@
                 <section>
                     <div class="slider">
                         <div class="slider-container">
-                            <h1>Sumondo Mental Fitness</h1>
+                            <h1>Copy - Sumondo Mental Fitness</h1>
                             <p>Detect and treat stress before you suffer from it</p>
                             <div class="choose-option-buttons">
                                 <button class="corporate-button">For Corporates</button>
